# ragprod

./: .gitignore  2pyproject.toml  CHANGELOG.md  DockerFile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  test.py
.github/workflows/: ci.yml  release.yml
chromadb_test/: chroma.sqlite3
docker/: api.Dockerfile  docker-compose.yaml  mcp.Dockerfile
docs/: api_usage.md  architecture.md  chunking.md  docker_deployment.md  docker_quick_reference.md  evaluator.md  how_to_versioning_release.md  sparse_search_alternatives.md
docs/retrieval_strategies/: README.md  dat.md  usage_examples.md
envs/: api.env.example  api.external.env  api.local.env  langfuse.env.example  mcp.env.example  mcp.external.env  mcp.local.env
notebooks/: C1M5_Assignment.ipynb  document.ipynb  test_retriever.ipynb
notebooks/01intro/: 01.intro.ipynb  C1M1_Ungraded_Lab_2.ipynb  utils.py
notebooks/03weviate/: C1M3_Ungraded_Lab_1.ipynb
notebooks/llm/: C1M4_Ungraded_Lab_1.ipynb  C1M4_Ungraded_Lab_2.ipynb
notebooks/monitor/: C1M5_Ungraded_Lab_1.ipynb
notes/: intro.md
src/ragprod/application/: env.py
src/ragprod/application/use_cases/: __init__.py  get_chunker_service.py  get_client_service.py  get_embeddings.py  get_langfuse_callback.py  retrieval_service.py
src/ragprod/domain/chunk/: __init__.py  base.py  chunk.py  chunker.py  semantic_chunking.py
src/ragprod/domain/client/: base.py
src/ragprod/domain/document/: __init__.py  base.py  document.py
src/ragprod/domain/embedding/: __init__.py  base.py  colbert_embeddings.py  huggingface_embedding.py  openai_embedding.py
src/ragprod/domain/encoder/: colbert.py
src/ragprod/domain/evaluator/: __init__.py  llm_performance_eval.py  retrieval_eval.py
src/ragprod/domain/prompt/: __init__.py
src/ragprod/domain/retrieval/: __init__.py  base.py  entities.py  exceptions.py
src/ragprod/domain/retrieval/strategies/: __init__.py
src/ragprod/domain/retrieval/strategies/dat/: __init__.py  alpha_tuner.py  config.py  effectiveness_scorer.py  strategy.py
src/ragprod/domain/retrieval/strategies/ragany/: __init__.py
src/ragprod/infrastructure/chunker/: __init__.py  base.py  character.py  chunker.py  markdown.py  recursive_character.py  semantic_chunking.py  token.py
src/ragprod/infrastructure/client/: __init__.py  base.py  chromadb.py  elasticsearch_client.py  faiss.py  qdrant.py  weaviate.py
src/ragprod/infrastructure/config/: __init__.py  base.py  fastapi_config.py  langfuse_config.py  settings.py
src/ragprod/infrastructure/embeddings/: __init__.py  colbert_embeddings.py  huggingface_embeddings.py  openai_embeddings.py
src/ragprod/infrastructure/evaluator/: __init__.py  retrieval_eval.py
src/ragprod/infrastructure/logger/: __init__.py  logger.py
src/ragprod/infrastructure/monitoring/: base.py  langfuse.py  phoenix.py
src/ragprod/infrastructure/prompt/: prompt_optimizer.py
src/ragprod/presentation/api/: app.py  run.py
src/ragprod/presentation/api/lifespan/: __init__.py  manager.py  service.py
src/ragprod/presentation/api/routes/: rag.py
src/ragprod/presentation/mcp/: add_docs.py  client.py  run.py  server.py  test_client.py
src/ragprod/presentation/mcp/lifespan/: manager.py  service.py
src/ragprod/presentation/mcp/tools/: rag.py
test/unit/: test_document.py
tests/integration/: test_api.py  test_dat_strategy.py  test_rag_tool.py
tests/unit/: test_chunking.py  test_config.py  test_embeddings.py  test_get_chunker_service.py  test_logger.py  test_retrieval_eval.py
tests/unit/application/: test_retrieval_service.py
tests/unit/domain/retrieval/: conftest.py  test_entities.py
tests/unit/domain/retrieval/strategies/: test_alpha_tuner.py  test_dat_config.py  test_effectiveness_scorer.py
