[project]
name = "ragprod"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrià Cabello", email = "cabl.adria@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "chromadb>=1.1.0",
    "colbert-ai>=0.2.22",
    "editables>=0.5",
    "hatchling>=1.27.0",
    "huggingface-hub[hf-xet]>=0.35.0",
    "ipykernel>=6.30.1",
    "langfuse>=3.5.0",
    "openai>=1.108.1",
    "opentelemetry-sdk>=1.37.0",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.0",
    "structlog>=25.5.0",
    "together>=1.5.25",
]

# Specific versions of torch, torchvision, and torchaudio are installed based on the extra feature uv sync --extra <extra>
[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]
cpu    = ["torch==2.5.0",        "torchvision==0.20.0",       "torchaudio==2.5.0"]
cu124  = ["torch==2.5.0+cu124",  "torchvision==0.20.0+cu124", "torchaudio==2.5.0+cu124"]

# Server/runtime mode (not mutually exclusive with cpu/cu124)
fastapi = ["fastapi", "uvicorn"]

mcp = ["fastmcp==2.12.3"]

[tool.uv]
conflicts = [
    [{ extra = "cpu"   }, { extra = "cu124" }],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",  extra = "cpu"   },
  { index = "pytorch-cu124",extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu",  extra = "cpu"   },
  { index = "pytorch-cu124",extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu",  extra = "cpu"   },
  { index = "pytorch-cu124",extra = "cu124" },
]

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = ["asyncio"]

[project.scripts]
ragprod = "ragprod:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:project.version",
]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"

